Fix wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -49,7 +49,6 @@ header {
     display: flex;
     font-size: 1.5rem;
     justify-content: center;
-    padding: 0 10rem;
 }
 
 @keyframes blink {
